Moved scale logic to musicnote.js; added common tones data rows

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                             <td id="ic-vector"></td>
                         </tr>
                         <tr id="row-ct-vector" hidden>
-                            <td i18n="row-ct-vector">Common tone vector:</td>
+                            <td i18n="row-ct-vector">Common-tone vector:</td>
                             <td id="ct-vector"></td>
                         </tr>
                         <tr id="row-complement">
@@ -122,13 +122,21 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                             <td>Symmetries:</td>
                             <td id="symmetries"></td>
                         </tr>
+                        <tr id="row-transposition" hidden>
+                            <td>Transpositions:</td>
+                            <td id="transpositions"></td>
+                        </tr>
+                        <tr id="row-ctt" hidden>
+                            <td i18n="row-ctt">Common tones under T<sub>n</sub>:</td>
+                            <td id="ctt"></td>
+                        </tr>
                         <tr id="row-inversions" hidden>
                             <td>Inversions:</td>
                             <td id="inversions"></td>
                         </tr>
-                        <tr id="row-transposition" hidden>
-                            <td>Transpositions:</td>
-                            <td id="transpositions"></td>
+                        <tr id="row-cti" hidden>
+                            <td i18n="row-cti">Common tones under <span>I<sub>n</sub></span>:</td>
+                            <td id="cti"></td>
                         </tr>
                         <tr id="row-multiples" hidden>
                             <td>Multiplications:</td>
