Added option to show all rows

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                         <tr id="row-subsets" hidden>
                             <td>Subsets:</td>
                             <td id="subsets">
-                                <a href="javascript:showSubsetSelector()">All subsets</a> • <a href="javascript:showPrimeSubsetSelector()">Prime subsets</a>
+                                <a href="javascript:showSubsetSelector()">All subsets</a> · <a href="javascript:showPrimeSubsetSelector()">Prime subsets</a>
                             </td>
                         </tr>
                         <tr id="row-misc" always-visible>
@@ -247,7 +247,8 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                         <tbody>
                             <tr>
                                 <td>Visible data:<br />
-                                    (<a href="javascript:resetVisibleDataRows()" autofocus>Reset</a>)
+                                    (<a href="javascript:resetVisibleDataRows()" autofocus>Reset</a> · 
+                                     <a href="javascript:setAllDataRowsVisible()" autofocus>All</a>)
                                 </td>
                                 <td id="visible-data-checkboxes-area"></td>
                             </tr>
