Disable spellcheck on inputs

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                         <tr id="row-input" always-visible>
                             <td><label for="input-main" i18n="input-main">Type a set:</label></td>
                             <td>
-                                <input id="input-main" class="setfont" type="text" oninput="onInput()">
+                                <input id="input-main" class="setfont" type="text" spellcheck="false" oninput="onInput()">
                             </td>
                         </tr>
                         <tr id="row-ruler-view" hidden>
@@ -195,7 +195,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                             </tr>
                             <tr id="table-set-row-filter">
                                 <td><label for="input-set-filter" i18n="input-set-filter">Filter:</label></td>
-                                <td><input id="input-set-filter" type="text" autofocus></td>
+                                <td><input id="input-set-filter" type="text" spellcheck="false" autofocus></td>
                             </tr>
                             <tr>
                                 <td>Dyads:</td>
