Change version string

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                     <b>Pitch-Class Set Visualizer, version <span id="version-number"></span></b>.<br />
                     Licensed under the <a href="https://www.gnu.org/licenses/agpl-3.0.html" target="_blank">GNU Affero General Public License version 3</a>.<br />
                     &#169;&nbsp;2024 Josias Matschulat.<br /><br />
-                    Descriptive names adapted from Larry Solomon, &#169;&nbsp;1997, 2005,<br />with additions from Straus, 2016..
+                    Descriptive names adapted from Larry Solomon, &#169;&nbsp;1997, 2005,<br />with additions from Straus, 2016.
                 </div>
             </dialog>
             <dialog id="popup-set-selector" class="popup-container">
